
Mantle Universal Data Model 1.0.2 is a minor new feature release.

This release is based on Moqui Framework TODO.

Non Backward Compatible Changes

- Agreement fromPartyId, fromRoleTypeId, toPartyId, toRoleTypeId fields
  replaced with organization and other (instead of from/to); the Agreement
  entities are not generally used, but any existing data/code would
  need to be moved/updated

New Features

- Set many entities to cache=never to avoid overhead of caching where
  read/write ratio doesn't justify it or where cache could cause issues
- Agreement and Term improvements
  - Refined TermType enums
  - Parties on Agreement are now organization and other instead of from/to
  - Added AgreementTerm termText and termNumber fields
  - New Settlement types for day of current or next month
- Added Enumeration type WorkType and workTypeEnumId to RateAmount,
  TimeEntry, WorkEffortParty, and replaced emplPositionClassId on
  WorkEffort work workTypeEnumId; this is useful for defining work types
  separate from position classes for a generally cleaner model and to
  better represent how position classes can have many work types

Bug Fixes


===========================================================================
Release 1.0.1 - 26 Mar 2016
===========================================================================

Mantle Universal Data Model 1.0.1 is a minor new feature release.

This release is based on Moqui Framework 1.6.2.

There are only minor changes in this release, including: changes for
updates in moqui-framework, seed and demo data improvements for project
management (used in HiveMind, etc), using new install data file type
(something between seed and demo), some new fields, etc.

===========================================================================
Release 1.0.0 - 24 Jan 2016
===========================================================================

Mantle Universal Data Model 1.0.0 is the first release as a component