@@ -155,11 +155,11 @@ along with this software (see the LICENSE.md file). If not, see
         <relationship type="one-nofk" related="mantle.party.contact.TelecomNumber" short-alias="telecomNumber"/>
     </entity>
     <entity entity-name="FacilityContent" package="mantle.facility">
-        <field name="facilityId" type="id" is-pk="true"/>
-        <field name="contentLocation" type="text-medium" is-pk="true"/>
-        <field name="facilityContentTypeEnumId" type="id" is-pk="true"/>
-        <field name="fromDate" type="date-time" is-pk="true"/>
-        <field name="thruDate" type="date-time"/>
+        <field name="facilityContentId" type="id" is-pk="true"/>
+        <field name="facilityId" type="id"/>
+        <field name="contentLocation" type="text-medium"/>
+        <field name="facilityContentTypeEnumId" type="id"/>
+        <field name="contentDate" type="date-time" default="ec.user.nowTimestamp"/>
         <relationship type="one" related="mantle.facility.Facility"/>
         <relationship type="one" title="FacilityContentType" related="moqui.basic.Enumeration">
             <key-map field-name="facilityContentTypeEnumId"/></relationship>
